# weather_cli

./: Cargo.toml  README.md
src/: api_call.rs  main.rs  user_input.rs
